prover-ray/zkcdriver/testdata/synced/invalid/const_07.zkc
//error:3:1-1:unexpected token
const dummy:u16
